--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/Symbol-5.png">
+  <meta name="description" content="This is my Resume">
+  <meta name="author" content="862199463">
 
-  <title>John Doe - Business Administration</title>
+  <title>Joshua Mack - Business Administration</title>
+
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +28,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Joshua Mack</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/joshuamack.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +59,31 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Joshua Mack
         </h1>
         <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">UX Strategist</div>
+        <p class="lead mb-4"> Everyone hates failure. As a UX Strategist, I work with businesses looking to not only prevent the failure of their products, but to create digital products that bring success to users and in turn reward the business. UX strategy consists of defining a problem that users face, coming up with solutions to their problems, and then creating the solution. Many businesses have great ideas, and they really do want to help their customers. But too often, many will just jump into creating the experience that they believe will best serve the customer. Working like this is a thing of the past. Given the competition and increasing number of alternatives today, businesses must work with their community of customers, not against them, to help ensure their success.
 
-        Enter bio here<br><br>
+<br><br>
 
-        Enter bio here
+        That’s where I come in. A UX strategist must be able to coordinate the inception, development, and hand off of digital products. This process starts in the brain, and ends up on a chosen digital medium. As a UX strategist, I always start out with a deep probe into the business itself and/ or any data that is available to me. I want to understand the business at its very core level: what industry are they in, who are their customers, what do they sell, how do customers make the choice to work with them, where do their customers come from, what does their current user experience look like from end-to-end, how do customers move through their current experience and many more key aspects of the business. From there I seek to understand the current snags within the experience, what the business feels like could be improved about their experience. Users are an integral part to this process, so gathering quantitative and qualitative data through usability testing, field studies, guerrilla research, card sorting, and mental model mapping are just some of the methods I have at my disposal to collect this data. The reason that gathering this data is so important is because we are designing for the user, not for ourselves. We want to make the product as easy for the user to achieve their goals as possible. Molding our product around the already developed mental models users carry around is a big must. The next step within the process is to start designing and getting feedback from users and internal stakeholders. As this process moves along, I keep in mind the development requirements, to make sure I don’t overdesign or overcomplicate to the point of bloating the product. Handing off to a developer should always go smooth, and I do everything I can to make sure the process goes smoothly. 
+<br><br>
+
+        The goal of any UX project is to hit a predetermined key performance indicator. I work with internal stakeholders to make sure that we stay on track and hit these goals. To see some of my work, you can search for me on Behance.
+
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
+          <a target="_blank" id="linkedin" href="https://www.linkedin.com/in/joshua-mack-139812189/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/jmack024">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="https://twitter.com/joshuadmack">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="mailto:hello@joshuamack.design">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,43 +98,46 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">UX Strategist</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://joshuamack.design">Freelance</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Gathered qualitative data to direct design of websites and mobile app<br> 
+              • UX Lead for Mobile Car Sales Marketplace<br>
+              • Experience with Atomic Design and Design Systems using Figma <br>
+              • Created stylescapes & mood boards to create a unified visual language that internal stakeholders and I could refer to <br>
+              • Created brand architecture for clients to accurately convey their positioning and differentiate them from competitors<br>
+              • Developed products using the Webflow platform for quick turn around times and economic efficiency<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">March 2020 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Party Assistant</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://thejumparound.com/">The Jump Around</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for checking in party guests, cleaning up 5,000 sqft venue within a team, ensuring safety of party guests<br>
+              • Listened to prospects needs, pains, and desires and offered them an appropriate party package<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">June 2018 - September 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Summer Lunchtime Volunteer</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">LAPL, Canoga Park Branch</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Sterilized lunchroom for patrons prior to their arrival<br>
+            • Worked within a team to ensure that lunches were distributed quickly, safely, and efficiently<br>
+            • Ensured that left over food was properly stored or disposed of<br>
+           
 
           </p>
           </div>
@@ -152,35 +161,14 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors of Science, Business Administration</div>
+            <div>BS, Business Administration, Marketing Concentration</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">October 2020 - June 2022</span>
           </div>
         </div>
 
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
-          </div>
-        </div>
 
       </div>
     </section>
@@ -191,7 +179,11 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Rivas Construction Behance Thumbnail.png" width="500px">
+            <img src="img/RC Stylescape 1-2.png" width="500px"><br>
+            <img src="img/RC Stylescape 2-2.png" width="500px">
+            <img src="img/RC Confirmation Screen.png" width="500px"><br>
+            <img src="img/RC Hero.png" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +191,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Joshua Mack</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
